Implemented Amplify Auth and cleaned up unused folders that were created when troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,10 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+
+
+
+
+# Ignore unnecessary folders
+TeamProject/
+amplify-backup/
