--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.12.1",
+    "@aws-amplify/backend-auth": "^1.5.1",
+    "@aws-amplify/backend-data": "^1.4.1",
+    "@aws-amplify/platform-core": "^1.6.5",
     "@aws-amplify/ui-react": "^6.9.5",
     "aws-amplify": "^6.14.1",
     "next": "14.2.10",
@@ -17,14 +20,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.5.1",
+    "@aws-amplify/backend": "^1.14.3",
     "@aws-amplify/backend-cli": "^1.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "aws-cdk": "^2",
-    "aws-cdk-lib": "^2",
-    "constructs": "^10.3.0",
+    "aws-cdk-lib": "^2.95.0",
+    "constructs": "^10.1.184",
     "esbuild": "^0.23.1",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
