Linking user pool to App

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,1 +1,45 @@
-{}
+{
+  "auth": {
+    "teamprojectc92727d8": {
+      "customAuth": false,
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "Cognito",
+      "serviceType": "imported"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_auth_teamprojectc92727d8_nativeClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "teamprojectc92727d8"
+        }
+      ]
+    },
+    "AMPLIFY_auth_teamprojectc92727d8_userPoolId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "teamprojectc92727d8"
+        }
+      ]
+    },
+    "AMPLIFY_auth_teamprojectc92727d8_userPoolName": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "teamprojectc92727d8"
+        }
+      ]
+    },
+    "AMPLIFY_auth_teamprojectc92727d8_webClientId": {
+      "usedBy": [
+        {
+          "category": "auth",
+          "resourceName": "teamprojectc92727d8"
+        }
+      ]
+    }
+  }
+}
