--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@aws-amplify/ui-react": "^6.10.0",
     "aws-amplify": "^6.14.1",
     "next": "14.2.10",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.14.3",
     "@aws-amplify/backend-cli": "^1.3.0",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
