--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.12.1",
+    "@aws-amplify/storage": "^6.8.3",
     "@aws-amplify/ui-react": "^6.10.0",
     "aws-amplify": "^6.14.1",
     "next": "14.2.10",
