Removed old S3 storage

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -53,21 +53,5 @@
       ]
     }
   },
-  "storage": {
-    "profilePictures": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "Name",
-            "Arn",
-            "LambdaExecutionRole"
-          ],
-          "category": "function",
-          "resourceName": "S3Triggera800f72f"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "S3"
-    }
-  }
+  "storage": {}
 }
