Added new S3 Storage

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -53,5 +53,11 @@
       ]
     }
   },
-  "storage": {}
+  "storage": {
+    "profilePicture": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
+    }
+  }
 }
