--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "esbuild": "^0.23.1",
     "prettier": "3.5.3",
     "tsx": "^4.19.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "workbox-webpack-plugin": "^7.3.0"
   }
 }
